@@ -36,64 +36,24 @@ list(
     name <- as.character(substitute(name))
     standardGeneric("$<-")
 }
-, "[" = function(x, i, j, ..., drop = TRUE)
-{
-    standardGeneric("[")
-}
-, "[<-" = function(x, i, j, ..., value)
-{
-    standardGeneric("[<-")
-}
-, "[[" = function(x, i, j, ...)
-{
-    standardGeneric("[[")
-}
-, "[[<-" = function(x, i, j, ..., value)
-{
-    standardGeneric("[[<-")
-}
+, "[" = function(x, i, j, ..., drop = TRUE) standardGeneric("[")
+, "[<-" = function(x, i, j, ..., value) standardGeneric("[<-")
+, "[[" = function(x, i, j, ...) standardGeneric("[[")
+, "[[<-" = function(x, i, j, ..., value) standardGeneric("[[<-")
 ### S4 generic via R_possible_dispatch in do_matprod
-, "%*%" = function(x, y)
-{
-    standardGeneric("%*%")
-}
+, "%*%" = function(x, y) standardGeneric("%*%")
+, "xtfrm" = function(x) standardGeneric("xtfrm")
 ### these have a different arglist from the primitives
-, "c" = function(x, ..., recursive = FALSE)
-{
-    standardGeneric("c")
-}
-, "all" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("all")
-}
-, "any" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("any")
-}
-, "sum" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("sum")
-}
-, "prod" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("prod")
-}
-, "max" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("max")
-}
-, "min" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("min")
-}
-, "range" = function(x, ..., na.rm = FALSE)
-{
-    standardGeneric("range")
-}
-## , "!" = function(e1)
-## {
-##     standardGeneric("!")
-## }
+, "c" = function(x, ..., recursive = FALSE) standardGeneric("c")
+, "all" = function(x, ..., na.rm = FALSE) standardGeneric("all")
+, "any" = function(x, ..., na.rm = FALSE) standardGeneric("any")
+, "sum" = function(x, ..., na.rm = FALSE) standardGeneric("sum")
+, "prod" = function(x, ..., na.rm = FALSE) standardGeneric("prod")
+, "max" = function(x, ..., na.rm = FALSE) standardGeneric("max")
+, "min" = function(x, ..., na.rm = FALSE) standardGeneric("min")
+
+, "range" = function(x, ..., na.rm = FALSE) standardGeneric("range")
+## , "!" = function(e1) standardGeneric("!")
 )
 
 ## the names of the basic funs with the style of "["
