@@ -1,5 +1,5 @@
 
-R version 2.11.0 Under development (unstable) (2009-11-26 r50575)
+R version 2.11.0 Under development (unstable) (2009-11-27 r50581)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -61,9 +61,9 @@ Type 'q()' to quit R.
 +     "\n\t starting with 'is.' :\t  ",
 +     length(is.bi <- bi[substring(bi,1,3) == "is."]), "\n", sep = "")
 
-Number of base objects:		1209
-Number of functions in base:	1180
-	 starting with 'is.' :	  49
+Number of base objects:		1210
+Number of functions in base:	1181
+	 starting with 'is.' :	  50
 
 > ## 0.14  : 31
 > ## 0.50  : 33
@@ -1457,5 +1457,5 @@ sm     3    3    3    3    4    4    4    4    2     2     2
 > par(op)
 > 
 > cat("Time elapsed: ", proc.time() - .ptime, "\n")
-Time elapsed:  2.503 0.134 2.668 0 0 
+Time elapsed:  1.791 0.116 2.856 0 0 
 > 
